X 0.2
    * Add Bow + Efficiency = instant shoot
    * Add Bow + Aqua Affinity = freeze water, stun players
    + Add Bow + Bane of Arthropods = poison
    * Fix Hoe + Respiration to grow saplings and crops using right-click
    * Fix Flint & Steel + Fire Protection to now combine with Fire Aspect
    * Fix Axe + Flame on saplings (etc.) causing IllegalArgumentException
    * Tested with CraftBukkit 1.1-R2

2012-01-29  0.1
    * Initial release